# multi-tenant-test

./: .gitignore  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
backend/: backend.Dockerfile  requirements.txt  start.sh
backend/app/: main.py
backend/app/api/v1/endpoints/: auth.py  llm.py  user.py
backend/app/core/: config.py  db_router.py  logger.py  middleware.py  security.py  wait_for_db.py
backend/app/db/: base.py  session.py
backend/app/models/: user.py
backend/app/pg_db/: base.py  init_pg_db.py  session.py
backend/app/pg_db/crud/: pg_user.py
backend/app/pg_db/models/: pg_user.py
backend/app/schemas/: auth.py  llm.py  user.py
backend/app/vector_db/: embeddings.py  init_qdrant.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
docker/nginx/: nginx.conf
frontend/: ca-bundle.pem  frontend.Dockerfile  requirements.txt
frontend/streamlit_app/: app.py
frontend/streamlit_app/sections/: page_1.py  page_2.py  page_3.py  page_4.py
frontend/streamlit_app/utils/: api_client.py  logger.py
scripts/: setup.sh  start.sh
